# timesync-mini

./: .gitignore  LICENSE  Makefile  README.md  crontab  go.mod  main.go  settime-darwin.go  settime-freebsd.go  settime-freebsd64.go  settime-linux.go  settime-linux32.go  settime-linux64.go  settime-netbsd.go  settime-openbsd.go  settime-openbsd64.go  settime-solaris64.go
bash/: README.md  timesync.sh
c/: .gitignore  Makefile  README.md  deploy_linux  deploy_solaris  test_linux  test_solaris  timesync.1  timesync.c  timesync_haiku.c  timesync_sched.c
c/haiku/: Makefile
c/remote/: deploy_bsd  deploy_haiku  test_bsd
csharp/: Makefile  README.md  TimeSync.cs  timesync.csproj
erlang/: Makefile  README.md  timesync.erl  timesync_escript
go/: .gitignore  Makefile  README.md  main.go  settime-darwin64.go  settime-freebsd64.go  settime-linux32.go  settime-linux64.go  settime-netbsd64.go  settime-openbsd64.go  settime-solaris64.go
haiku/: timesync.c
java/: Makefile  README.md  TimeSync.java  build.xml
lua/: Makefile  README.md  timesync.lua
ocaml/: Makefile  README.md  timesync.ml  timesync_stubs.c
perl/: README.md  timesync.pl
python/: Makefile  README.md  timesync.py
ruby/: README.md  timesync.rb
rust/: Cargo.toml  Makefile  README.md
rust/src/: main.rs
sbcl/: Makefile  README.md  test-simple.lisp  timesync.lisp  timesync.sh
swift/: Makefile  README.md  timesync.swift
