[package]
name = "timesync"
version = "0.1.0"
edition = "2021"
authors = ["tsupplis"]
license = "MIT"
description = "Minimal SNTP client for time synchronization"

[dependencies]
libc = "0.2"
syslog = "7.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
